removed sidebar index. Change icon image and color for easter egg to attract more attention.

--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ social:
     # - https://www.facebook.com/username
     - https://www.linkedin.com/in/david-w-pickei/
     - type: fun-feature
-      icon: 'fa-solid fa-parachute-box'
+      icon: 'fa-solid fa-utensils'
 
 
 # Site Verification Settings
