--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -25,4 +25,4 @@
   url: 'https://www.linkedin.com/in/david-w-pickei/' # Fill with your Linkedin homepage
 
 - type: fun-feature
-  icon: 'fa-solid fa-parachute-box'
+  icon: 'fa-solid fa-utensils'
