--- a/_data/share.yml
+++ b/_data/share.yml
@@ -6,9 +6,9 @@ platforms:
   #   icon: "fa-brands fa-square-x-twitter"
   #   link: "https://twitter.com/intent/tweet?text=TITLE&url=URL"
 
-  - type: Facebook
-    icon: "fab fa-facebook-square"
-    link: "https://www.facebook.com/sharer/sharer.php?title=TITLE&u=URL"
+  # - type: Facebook
+  #   icon: "fab fa-facebook-square"
+  #   link: "https://www.facebook.com/sharer/sharer.php?title=TITLE&u=URL"
 
   # - type: Telegram
   #   icon: "fab fa-telegram"
@@ -20,8 +20,6 @@ platforms:
     icon: "fab fa-linkedin"
     link: "https://www.linkedin.com/sharing/share-offsite/?url=URL"
 
-  - type: fun-feature
-    icon: 'fa-solid fa-utensils'
   #
   # - type: Weibo
   #   icon: "fab fa-weibo"
