--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: >- # used by seo meta and the atom feed
 url: "https://dpickei.github.io"
 
 github:
-  username: DPickei # change to your GitHub username
+  username: DPickei # change to your GitHub username.
 
 # twitter:
 #   username: twitter_username # change to your Twitter username
