--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ theme_mode: # [light | dark]
 # e.g. 'https://cdn.com'
 # cdn: "https://chirpy-img.netlify.app"
 
-# the avatar on sidebar, support local or CORS resources
+# the avatar on sidebar, support local or CORS resources.
 avatar: "assets/images/avatar.png"
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
